<resources>
    <string name="app_name">EventOrganizer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="add_event">Add event</string>
    <string name="submit">Submit</string>
    <string name="event_details">Event details</string>
    <string name="menu_event">Events</string>
    <string name="delete_event">Delete event</string>
    <string name="activityAdded">Activity added successfully.</string>
    <string name="eventDeleted">Event deleted successfully.</string>
    <string name="menu_home">Home</string>
    <string name="menu_calendar">Calendar</string>
    <string name="no_events">There are no events.</string>
    <string name="menu_settings">Settings</string>
    <string name="search">Search...</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="location">Pick location</string>
    <string name="time">Pick time</string>

    <string name="date">Pick date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>



    <string name="languages">Languages</string>
    <string name="default_language" translatable="false">en</string>
    <string name="notifications_off">Off</string>
    <string name="notifications_hour_before">Hour before</string>
    <string name="notifications_day_before">Day before</string>
    <string name="notifications_week_before">Week before</string>
    <string name="language_key" translatable="false">language</string>
    <string name="language_title">Choose language</string>
    <string name="notifications">Notifications</string>
    <string name="notification_default" translatable="false">2</string>
    <string name="notification_key" translatable="false">notification</string>
    <string name="notification_period">Notification period</string>

    <string name="use_camera">Use Camera</string>
    <string name="upload_from_galery">Upload from Gallery</string>
    <string name="upload_from_internet">Upload from Internet</string>
    <string name="select_option_title">Select an option</string>
    <string name="enter_image_url">Enter Image URL</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="name_required">Name is required!</string>
    <string name="description_required">Description is required!</string>
    <string name="date_required">Date is required!</string>
    <string name="time_required">Time is required!</string>
    <string name="location_required">Location is required!</string>
    <string name="save">SAVE</string>




</resources>