<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:icon="@drawable/translate_icon"
        app:title="@string/languages"
        >
        <ListPreference
            app:defaultValue="@string/default_language"
            app:entries="@array/languageArray"
            app:entryValues="@array/languageValues"
            app:key="@string/language_key"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/notifications"
        app:icon="@drawable/baseline_notifications_active_24">
        <ListPreference
            app:defaultValue="@string/notification_default"
            app:entries="@array/notificationArray"
            app:entryValues="@array/notificationValues"
            app:key="@string/notification_key"
            app:title="@string/notification_period"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>