<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_events">

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.eventorganizer.ui.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" >

        <action
            android:id="@+id/action_nav_calendar_to_nav_events2"
            app:destination="@id/nav_events" />
        <action
            android:id="@+id/action_nav_calendar_to_nav_settings"
            app:destination="@id/nav_settings" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.eventorganizer.ui.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_nav_settings_to_nav_calendar"
            app:destination="@id/nav_calendar" />
        <action
            android:id="@+id/action_nav_settings_to_nav_events"
            app:destination="@id/nav_events" />
    </fragment>

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.eventorganizer.ui.EventsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_events" >
        <action
            android:id="@+id/action_nav_events_to_nav_calendar"
            app:destination="@id/nav_calendar" />
        <action
            android:id="@+id/action_nav_events_to_nav_settings"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_nav_events_to_eventFragment"
            app:destination="@id/eventFragment" />
    </fragment>
    <fragment
        android:id="@+id/eventFragment"
        android:name="com.example.eventorganizer.ui.EventFragment"
        android:label="fragment_event"
        tools:layout="@layout/fragment_event" >
        <action
            android:id="@+id/action_eventFragment_to_nav_events"
            app:destination="@id/nav_events" />
    </fragment>
    <fragment
        android:id="@+id/addEventFragment"
        android:name="com.example.eventorganizer.ui.AddEventFragment"
        android:label="@string/add_event"
        tools:layout="@layout/fragment_add_event" />


</navigation>