<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:ignore="MissingClass">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:maxLines="2"
        android:minHeight="48dp" />

    <LinearLayout
        android:id="@+id/dateTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pickDateEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableStart="@drawable/baseline_date_range_24"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:gravity="center_vertical"
            android:hint="@string/date"
            android:inputType="none"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/pickTimeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableStart="@drawable/time"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:gravity="center_vertical"
            android:hint="@string/time"
            android:inputType="none"
            android:minHeight="48dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/pickLocationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/round_edit_location_alt_24"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/location"
        android:minHeight="48dp" />


    <Spinner
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Spinner"
        android:minHeight="48dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addPhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/desire"
        android:contentDescription="+"
        android:src="@drawable/baseline_add_a_photo_24"
        android:tint="@android:color/white" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/imageViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Submit" />
</LinearLayout>
